--- a/ExercicioCodeFirst-Cast/ExercicioCodeFirst-Cast/EFCodeFirstApp/EFCodeFirstApp.csproj
+++ b/ExercicioCodeFirst-Cast/ExercicioCodeFirst-Cast/EFCodeFirstApp/EFCodeFirstApp.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>201704102103284_Casting.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="MovieDao.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
