--- a/ExercicioCodeFirst-Cast/ExercicioCodeFirst-Cast/PL.Models/PL.Models.csproj
+++ b/ExercicioCodeFirst-Cast/ExercicioCodeFirst-Cast/PL.Models/PL.Models.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Actor.cs" />
     <Compile Include="ActorMovie.cs" />
     <Compile Include="Genre.cs" />
+    <Compile Include="IMovieDAO.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="MovieContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
